Tests/Should_fail/duplicate_pattern3.int
let main = fn (x, (y, x)) -> return x
